--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -9,22 +9,29 @@
 }
 
 .squid {
-  border-radius: 0.5rem;
-  padding: 1rem;
-
   position: relative;
 
-  background: var(--color-gray-60);
+  border-radius: 0.5rem;
+  padding-top: 0.5rem;
+
+  max-height: 100%;
+  overflow: scroll;
+
+  background: var(--color-gray-0);
   box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .squid::before {
   position: absolute;
-  left: 1.5rem;
-  top: -0.5rem;
+  left: 0;
+  right:0;
+  top: 0;
+
+  height: 1.25rem;
   padding: 0.25rem;
 
   content: attr(data-name);
 
-  background-color: #fff;
+  background-color: var(--color-gray-60);
+  color: var(--color-gray-0);
 }
