--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,7 @@
 * {
-  font-family: "Comic Sans MS", cursive, sans-serif;
   box-sizing: border-box;
+}
+
+html {
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
