--- a/src/components/dashboard/Dashboard.module.css
+++ b/src/components/dashboard/Dashboard.module.css
@@ -32,5 +32,6 @@
   content: attr(data-name);
 
   background-color: var(--color-gray-60);
+  border-bottom: 0.25rem solid var(--color-abiliared-100);
   color: var(--color-gray-0);
 }
