--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,7 +1,8 @@
 .header {
-  background-color: var(--color-abiliared-100);
+  background-color: var(--color-gray-60);
+  border-bottom: 0.5rem solid var(--color-abiliared-100);
   color: var(--color-gray-0);
-
+  
   padding: 1rem;
 }
 
