--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -8,14 +8,7 @@
 .main {
   flex-grow: 1;
 
-  padding: 1rem;
+  padding: 0.5rem 0.5rem 0;
 
-  background-color: var(--color-gray-10);
-}
-
-.footer {
-  background-color: var(--color-gray-50);
-  color: var(--color-gray-0);
-
-  padding: 1rem;
+  background-color: var(--color-gray-90);
 }
