--- a/src/components/loadingSpinner/LoadingSpinner.module.css
+++ b/src/components/loadingSpinner/LoadingSpinner.module.css
@@ -5,4 +5,59 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  --animation-distance: 50px;
+}
+
+.ballOne {
+  width: 30px;
+  height: 30px;
+  background-color: var(--color-abiliared-100);
+  content: ' ';
+  border-radius: 1rem;
+
+  animation: bounce 2s infinite ease-in-out;
+}
+
+.ballOne, .ballTwo, .ballThree {
+  position: absolute;
+  margin-top: 2rem;
+
+  border-radius: 50%;
+  animation: bounce 1.5s infinite ease-in-out;
+}
+
+.ballOne {
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--color-abiliared-100);
+
+}
+
+.ballTwo {
+  width: 0.6rem;
+  height: 0.6rem;
+  background-color: var(--color-abiliared-120);
+  animation-delay: 50ms;
+}
+
+.ballThree {
+  width: 0.3rem;
+  height: 0.3rem;
+  background-color: var(--color-abiliared-170);
+  animation-delay: 100ms;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateX(calc(var(--animation-distance) * -1));
+  }
+
+  50% {
+    transform: translateX(var(--animation-distance));
+  }
+
+  100% {
+    transform: translateX(calc(var(--animation-distance) * -1));
+  }
 }
