--- a/src/components/squid/Squid.module.css
+++ b/src/components/squid/Squid.module.css
@@ -6,12 +6,17 @@
 .squid > header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   padding: 0.5rem 1rem;
 
   background-color: var(--color-gray-60);
   border-bottom: 1px solid var(--color-abiliared-100);
   color: var(--color-gray-0);
+}
+
+.danger {
+  margin-left: 1rem;
 }
 
 .squid > div {
